--- a/src/theme/components/Footer.astro
+++ b/src/theme/components/Footer.astro
@@ -3,7 +3,7 @@
     <span class="pr-1">Made by</span>
     <a
       rel="nofollow noopener noreferrer"
-      href="https://github.com/zhengxs2018"
+      href="https://github.com/zhengxs2018/ai-chat"
       target="_blank"
     >
       阿森
