--- a/src/theme/Layout.astro
+++ b/src/theme/Layout.astro
@@ -35,3 +35,13 @@ const baApiKey = import.meta.env.BAIDU_API_KEY
     )}
   </body>
 </html>
+
+<style is:global>
+.ai-fcc {
+  @apply flex items-center justify-center;
+}
+
+.ai-fcb {
+  @apply flex items-center justify-between;
+}
+</style>
