--- a/src/theme/components/Footer.astro
+++ b/src/theme/components/Footer.astro
@@ -9,13 +9,13 @@
       阿森
     </a>
     <span class="px-1">|</span>
-    <span class="pr-1">Powered by</span>
+    <span class="pr-1">License</span>
     <a
       rel="nofollow noopener noreferrer"
-      href="https://openai.com/"
+      href="https://zh.wikipedia.org/wiki/MIT%E8%AE%B8%E5%8F%AF%E8%AF%81"
       target="_blank"
     >
-      OpenAI
+      MIT
     </a>
   </p>
   <p class="mt-3 text-xs opacity-30">
