--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -75,11 +75,42 @@ import Footer from '@/theme/components/Footer.astro';
   }
 </script>
 
-<style>
+<style is:global>
+  :root {
+    --content-width: 72ch;
+    --content-padding-top: 4rem;
+    --header-height: calc(112px + 1rem);
+    --footer-height: calc(74px + 4rem);
+    --content-background: #f6f6f6;
+    --accent: 124, 58, 237;
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      #da62c4 30%,
+      white 60%
+    );
+  }
+
   html {
     font-family: system-ui, sans-serif;
     background-color: #f6f6f6;
   }
+
+  footer {
+    position: fixed;
+    left: calc(50%);
+    transform: translateX(-50%);
+    padding: 2rem;
+    max-width: var(--content-width);
+    width: 100%;
+    z-index: 999;
+    background: var(--content-background);
+  }
+
+  footer {
+    bottom: 0;
+  }
+
 
   .gpt-title {
     margin-right: 0.25rem;
@@ -117,7 +148,7 @@ import Footer from '@/theme/components/Footer.astro';
     cursor: pointer;
     align-items: center;
     justify-content: center;
-    background-color: #94a3b8;
+    background-color: rgb(148 163 184 / 34%);
   }
 
   @keyframes shake {
