生产环境切换为 deno + esm.sh 的方式部署

--- a/src/apps/translator/index.css
+++ b/src/apps/translator/index.css
@@ -45,8 +45,8 @@
   animation: caret 500ms steps(44) infinite;
 }
 
-@keyframes caret: {
-  50%: {
-    bordercolor: 'transparent';
+@keyframes caret {
+  50% {
+    border-color: transparent;
   }
 }
