--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,3 @@
 ---
-import Layout from '@/theme/Layout.astro';
-
-import ChatApp from '@/apps/chat/main';
-import { checkPass } from '@/shared/node/auth';
-
-if (!checkPass(Astro.cookies.get('code').value)) {
-  return Astro.redirect('/password', 302);
-}
+return Astro.redirect('/marketing', 302)
 ---
-
-<Layout title="与 AI 对话">
-  <ChatApp client:only="react" />
-</Layout>
